--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.15",
+    "aws-cdk": "^2.146.0",
+    "aws-cdk-lib": "^2.146.0",
     "bcrypt": "^5.1.1",
+    "cdk-docker-image-deployment": "^0.0.577",
+    "cdk-ecr-deployment": "^3.0.66",
     "clsx": "^2.0.0",
     "formidable": "^3.5.1",
     "next": "^14.0.2",
